@@ -890,7 +890,7 @@ PassRefPtr<DocumentFragment> createFragmentFromMarkup(Document* document, const 
 
     RefPtr<DocumentFragment> fragment = element->createContextualFragment(markup);
 
-    if (fragment && !baseURL.isEmpty() && baseURL != document->baseURL())
+    if (fragment && !baseURL.isEmpty() && baseURL != "about:blank" && baseURL != document->baseURL())
         completeURLs(fragment.get(), baseURL);
 
     return fragment.release();
