@@ -1,3 +1,15 @@
+2007-12-29  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
+        http://bugs.webkit.org/show_bug.cgi?id=14428
+        FCKEditor: Images disappear on drag/drop and copy/paste
+
+        Test: editing/pasteboard/drag-image-in-about-blank-frame.html
+
+        * editing/markup.cpp: (WebCore::createFragmentFromMarkup): Don't use "about:blank" as a
+        base URL, just like we don't use an empty one.
+
 2007-12-29  Jan Michael Alonzo  <jmalonzo@unpluggable.com>
 
         Reviewed by Alp Toker.
